# F1-Telemetry

./: .gitignore  Cargo.toml  README.md
docs/: ~$ta Output from F1 23 v29x3.docx
src/: .env  db.rs  lib.rs  listener.rs  main.rs  packet.rs  udp_socket_interface.rs
src/data_processing/: packet_throughput.rs
src/db/: client.rs  models.rs  operations.rs  setup.sql
src/packets/: car_damage_data.rs  car_setups.rs  car_status.rs  car_telemetry.rs  event.rs  final_classication.rs  header.rs  lap_data.rs  lobby_info.rs  motion.rs  motion_ex.rs  participants.rs  session.rs  session_history.rs  tyre_sets.rs
tests/: listener_tests.rs  mocks.rs  operations_tests.rs
