[package]
name = "project"
version = "0.2.0"
edition = "2021"

[dependencies]
log = "0.4.21"
env_logger = "0.11.3"
byteorder = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.1"
dotenv = "0.15"

[dev-dependencies]
assert_matches = "1.5.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "project"
path = "src/main.rs"
